Bug fix: Spacing issues for mobile TOC

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -125,6 +125,7 @@ blockquote code{
 }
 
 #title h2{
+  font-size: 32px !important;
   color: #888;
 }
 
